tests/pass/modulo_operator.kr
fn inisiu() {
    konfirma(10 % 3 == 1);
    konfirma(9 % 3 == 0);

    nter x = 17;
    x %= 5;
    konfirma(x == 2);

    u8 u = 7;
    konfirma(u % 4 == 3);

    num f = 10.5;
    f %= 3.0;
    konfirma(f == 1.5);

    mostran(10 % 3);
}
