tests/fail/fail_not_non_bool.kr
fn inisiu() {
    mostran(!5);
}
